# NHA-231

./: README.md  app.py  app_gradio.py  pyproject.toml  readme.md  requirements.txt  requirements_gradio.txt
Models/: asl_landmarks_best.h5  asl_landmarks_classes.pkl  asl_landmarks_final.h5
Nootbook/: sign-language-mediapipe-working.ipynb
Report&Presentation/: Hand Gesture Recognition Report.docx  Hand Gesture Recognition System.pptx
Webcam Test/: test.py
app/: index.html  server.py
docs/: index.html
notebooks/: Copy_of_DEPI_Project.ipynb  asl-project-with-cnn-model.ipynb  sign-language-mediapipe-working.ipynb  sign-language-mediapipe.ipynb
src/: app.py
