[project]
name = "sign-languge"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dagshub>=0.6.3",
    "matplotlib>=3.10.7",
    "mediapipe>=0.10.21",
    "mlflow>=3.6.0",
    "numpy>=1.26.4",
    "opencv-python>=4.11.0.86",
    "pandas>=2.3.3",
    "scikit-learn>=1.7.2",
    "tensorflow[and-cuda]>=2.18.1",
    "tqdm>=4.67.1",
]
